Refactoring adding factory helpers to the sprites entities

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "outDir": "./public",
     "rootDir": "./src",
-    "strict": true,
+    "strict": false,
     "esModuleInterop": true
   },
   "tsc-alias": {
