- Toward the SpriteBase class to create Sprites trough the Factory pattern.No extension needed - InputHandler, Render and SpriteFactory are Singleton now

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "dependencies": {
+    "rxjs": "^7.8.1"
+  },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "concurrently": "^8.2.2",
