--- a/package.json
+++ b/package.json
@@ -3,14 +3,17 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build-live-server": "tsc && tsc-alias && npm run copy-files-to-public && live-server",
-    "build": "tsc && tsc-alias && npm run copy-files-to-public",
-    "copy-files-to-public": "cp index.html public/index.html && cp -r static public",
-    "watch": "nodemon --watch src --ext ts --exec 'npm run build-and-restart'",
-    "build-and-restart": "npm run build  && node server/server.js",
+    "test-old": "echo \"Error: no test specified\" && exit 1",
+    "build-old": "npx tsc && npx tsc-alias && npm run copy-files-to-public",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "copy-files-to-public": "npx copyfiles index.html public && npx copyfiles -a assets/**/* public",
+    "watch": "npx nodemon --watch src --ext ts --exec \"npm run build-and-restart\"",
+    "build-and-restart": "npm run build && node server/server.js",
     "build-dev": "npm run build && node server/server.js",
-    "build-debug": "npm run watch"
+    "build-debug": "npm run watch",
+    "install-clean": "npm install --no-audit --no-fund"
   },
   "keywords": [],
   "author": "",
@@ -22,9 +25,13 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "concurrently": "^8.2.2",
+    "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
     "express": "^4.19.2",
     "install": "^0.13.0",
     "nodemon": "^3.1.3",
-    "tsc-alias": "^1.8.10"
+    "tsc-alias": "^1.8.10",
+    "typescript": "^5.5.2",
+    "vite": "^5.3.2"
   }
 }
